package day11.composite;

public interface TaskComponent {
    String getName();
    int getTimeHours();
    void display();
}
